fix: 퀵메뉴가 데스크톱에서 보이지 않는 문제 수정
- quickmenu.html 내부의 모바일 미디어 쿼리 주석 처리
- 768px 이하에서 퀵메뉴를 숨기는 중복 규칙 제거
- 데스크톱에서 퀵메뉴가 정상적으로 표시되도록 수정

--- a/quickmenu.html
+++ b/quickmenu.html
@@ -69,12 +69,14 @@
             background-color:transparent !important;
         }
 
-        /* 모바일에서 퀵메뉴 숨김 */
+        /* 데스크톱에서만 퀵메뉴 표시 - 주석 처리하여 항상 표시되도록 함 */
+        /*
         @media (max-width: 768px) {
             #quickList {
                 display: none !important;
             }
         }
+        */
     </style>
 </head>
 <body>
