calendar-page와 board-page에 1450px 그리드 시스템 적용
- 두 페이지에 grid-system-1450.css 링크 추가
- 콘텐츠 영역을 container 클래스로 감싸서 1450px max-width 적용
- 반응형 패딩 적용 (모바일 15px, 태블릿 20px, 데스크톱 30px)
- index.html과 동일한 그리드 시스템으로 통일

--- a/board-page.html
+++ b/board-page.html
@@ -14,8 +14,10 @@
 <link rel="stylesheet" href="https://skincare1007.shiningcorp.com/skin/board/sh_basic/sh_style.css?ver=171222">
 <link rel="stylesheet" href="css/vendor/user.css">
 <link rel="stylesheet" href="css/pages/page_style.css">
-    <link rel="stylesheet" href="css/responsive.css">
-    <link rel="stylesheet" href="css/button-styles.css">
+<link rel="stylesheet" href="css/responsive.css">
+<link rel="stylesheet" href="css/button-styles.css">
+<!-- 1450px Grid System CSS 추가 -->
+<link rel="stylesheet" href="css/grid-system-1450.css">
 <style>
 /* rem 기준 설정 - 16px 기준 */
 html {
@@ -467,7 +469,8 @@ var g5_cookie_domain = "";
 </div></div>
 		</div>
 		<!-- 콘텐츠영역 -->
-		<div id="sh_content">
+		<div class="container">
+			<div id="sh_content">
 
 	
 <div id="sh_bo_list">
@@ -578,7 +581,8 @@ var g5_cookie_domain = "";
 </div>
 
 
-    	</div><!-- sh_content -->
+			</div><!-- sh_content -->
+		</div><!-- container -->
     
    
 	</div><!-- sh_container_wrapper --> 
