--- a/index.html
+++ b/index.html
@@ -456,6 +456,21 @@ var g5_cookie_domain = "";
     position: relative;
 }
 
+.doctor_logo {
+    width: 50px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 10px;
+}
+
+.doctor_logo img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
 .doctor_line {
     flex: 1;
     height: 0.125rem;
@@ -1553,7 +1568,9 @@ window.addEventListener('load', resizeSnsVideo);
                 <div class="doctor_line_section">
                     <div class="doctor_line"></div>
                     <span class="doctor_category">MISOPIN Doctor</span>
-                    <div class="doctor_logo">M</div>
+                    <div class="doctor_logo">
+                        <img src="img/misopin-temporary-logo.png" alt="미소핀 로고" />
+                    </div>
                 </div>
                 <h1 class="doctor_name">대표원장 김지식</h1>
             </div>
