원장 소개 영역 로고를 SVG 파일로 변경
- PNG에서 SVG로 변경하여 해상도 개선
- misopin-temporary-logo 1.svg 파일 사용

--- a/index.html
+++ b/index.html
@@ -1569,7 +1569,7 @@ window.addEventListener('load', resizeSnsVideo);
                     <div class="doctor_line"></div>
                     <span class="doctor_category">MISOPIN Doctor</span>
                     <div class="doctor_logo">
-                        <img src="img/misopin-temporary-logo.png" alt="미소핀 로고" />
+                        <img src="img/misopin-temporary-logo 1.svg" alt="미소핀 로고" />
                     </div>
                 </div>
                 <h1 class="doctor_name">대표원장 김지식</h1>
