fix: 게시판 페이지 데스크톱 너비 최적화
- board-page, board-notice, board-event 페이지 너비 조정
- 데스크톱: 최대 너비 1450px로 제한 및 중앙 정렬
- 태블릿: 적절한 패딩 설정 (20px)
- 모바일: 100% 너비 유지하여 화면 전체 활용
- 반응형 브레이크포인트별 최적화 적용

--- a/board-notice.html
+++ b/board-notice.html
@@ -227,15 +227,31 @@ var g5_cookie_domain = "";
     background-color: #9F988C !important;
 }
 
-/* 콘텐츠 영역에서 1450px 그리드 시스템 비활성화 */
+/* 콘텐츠 영역 1450px 최대 너비 설정 */
 #sh_container_wrapper {
-    max-width: 100% !important;
-    padding: 0 !important;
+    max-width: 1450px !important;
+    margin: 0 auto !important;
+    padding: 0 30px !important;
 }
 
 #sh_content {
     max-width: 100% !important;
     width: 100% !important;
+}
+
+/* 모바일 반응형 */
+@media (max-width: 768px) {
+    #sh_container_wrapper {
+        max-width: 100% !important;
+        padding: 0 15px !important;
+    }
+}
+
+/* 태블릿 반응형 */
+@media (min-width: 769px) and (max-width: 1023px) {
+    #sh_container_wrapper {
+        padding: 0 20px !important;
+    }
 }
 </style>
 <link rel="stylesheet" href="css/index-custom.css">
