--- a/board-page.html
+++ b/board-page.html
@@ -558,52 +558,13 @@ var g5_cookie_domain = "";
                     </tr>
                 </thead>
                 <tbody id="board-posts-list">
-                                        <tr class="">
-                                                <td class="num" data-label="번호">
-                        3                        </td>
-
-                        <td class="subject" style="padding-left:0" data-label="제목">
-                            <div>
-                                                                <a href="board-notice.html" class="cate_link"><span>Notice</span></a>
-
-                                <a href="board-detail.html">
-                                                                        불필요한 시술 없이 꼭 필요한 케어만 권장합니다.                                </a>
-                                                            </div>
+                    <!-- 로딩 상태 표시 -->
+                    <tr>
+                        <td colspan="4" style="text-align: center; padding: 40px;">
+                            <div style="color: #666;">게시글을 불러오는 중입니다...</div>
                         </td>
-                        <td class="name sv_use" data-label="작성자"><span class="sv_member">최고관리자</span></td>
-                        <td class="datetime" data-label="등록일">2025-04-02</td>
                     </tr>
-                                        <tr class="">
-                                                <td class="num" data-label="번호">
-                        2                        </td>
-
-                        <td class="subject" style="padding-left:0" data-label="제목">
-                            <div>
-                                                                <a href="board-notice.html" class="cate_link"><span>Notice</span></a>
-
-                                <a href="board-detail.html">
-                                                                        과장 없는 솔직한 상담과 합리적인 시술을 제공합니다.                                </a>
-                                                            </div>
-                        </td>
-                        <td class="name sv_use" data-label="작성자"><span class="sv_member">최고관리자</span></td>
-                        <td class="datetime" data-label="등록일">2025-04-02</td>
-                    </tr>
-                                        <tr class="">
-                                                <td class="num" data-label="번호">
-                        1                        </td>
-
-                        <td class="subject" style="padding-left:0" data-label="제목">
-                            <div>
-                                                                <a href="board-notice.html" class="cate_link"><span>Notice</span></a>
-
-                                <a href="board-detail.html">
-                                                                        3正 정품·정량·정성으로 꼭 맞는 시술만을 제안합니다.                                </a>
-                                                            </div>
-                        </td>
-                        <td class="name sv_use" data-label="작성자"><span class="sv_member">최고관리자</span></td>
-                        <td class="datetime" data-label="등록일">2025-04-02</td>
-                    </tr>
-                                                        </tbody>
+                </tbody>
             </table>
         </div>
                 
