Fix: 예약 폼 HTTP 405 에러 해결
- form 태그에서 method='post' action='#' 제거
- JavaScript로만 폼 제출 처리하도록 수정
- 정적 HTML 파일에 POST 요청 방지

--- a/calendar-page.html
+++ b/calendar-page.html
@@ -646,7 +646,7 @@ jQuery(function($){
 	<button class="close" type="button" onclick="calendar_inqClose()"><span></span><p class="sound_only">닫기</p></button>
   	<div class="tit">예약자 정보</div>
 	<div class="inner">
-        <form name="inq_popup" method="post" action="#" autocomplete="off" onsubmit="return submitReservation(event);">
+        <form name="inq_popup" autocomplete="off" onsubmit="return submitReservation(event);">
             <input type="hidden" name="bo_table" value="table36" />
             <input type="hidden" name="max_date" value="90">
             <input type="hidden" name="today_date" value="0">
