Fix: 예약 폼 GET 파라미터 URL 추가 문제 해결
- submit 버튼을 type='button'으로 변경
- onclick 이벤트로 직접 호출하도록 수정
- 폼 기본 제출 동작 완전 차단

--- a/calendar-page.html
+++ b/calendar-page.html
@@ -646,7 +646,7 @@ jQuery(function($){
 	<button class="close" type="button" onclick="calendar_inqClose()"><span></span><p class="sound_only">닫기</p></button>
   	<div class="tit">예약자 정보</div>
 	<div class="inner">
-        <form name="inq_popup" autocomplete="off" onsubmit="return submitReservation(event);">
+        <form name="inq_popup" autocomplete="off" onsubmit="submitReservation(event); return false;">
             <input type="hidden" name="bo_table" value="table36" />
             <input type="hidden" name="max_date" value="90">
             <input type="hidden" name="today_date" value="0">
@@ -736,7 +736,7 @@ jQuery(function($){
                 </ul>
             </div>    
         </div>
-        <button type="submit" class="sbm_btn">예약신청</button>  
+        <button type="button" class="sbm_btn" onclick="submitReservation(event);">예약신청</button>  
     </form>
 </div>    </div>
 
@@ -917,10 +917,12 @@ $(function() {
 // 예약 폼 제출 함수
 async function submitReservation(event) {
     console.log('submitReservation called');
-    event.preventDefault();
-    event.stopPropagation();
+    if (event && event.preventDefault) {
+        event.preventDefault();
+        event.stopPropagation();
+    }
 
-    const form = event.target;
+    const form = document.forms['inq_popup'];
     const formData = new FormData(form);
 
     // 폰 번호 포맷팅 (숫자만 있으면 하이픈 추가)
