Fix: 홈페이지 팝업 표시 안되는 문제 해결
- index.html에 api-client.js 추가
- api-components.css 추가
- 팝업 자동 초기화 기능 활성화

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
 <link rel="stylesheet" href="css/vendor/user.css">
 <!-- 1450px Grid System CSS 추가 -->
 <link rel="stylesheet" href="css/grid-system-1450.css">
+<!-- API Integration for Popups -->
+<link rel="stylesheet" href="css/api-components.css">
+<script src="js/api-client.js"></script>
 <style>
 @import url(//fonts.googleapis.com/earlyaccess/nanumpenscript.css);
 @import url(//fonts.googleapis.com/earlyaccess/nanumbrushscript.css);
