Fix: 팝업 시스템 근본적 해결 - 캐싱 문제 완전 해결
✨ 주요 변경사항:
- vercel.json: JS 파일 캐시 무효화 설정 (max-age=0)
- index.html: 동적 캐시 버스팅 스크립트 로더 구현
- api-client.js: 강력한 다중 초기화 시스템 구축
  - 3단계 백업 타이머 (즉시, 2초, 5초)
  - 상세한 디버깅 로그 시스템
  - 의존성 검증 및 에러 처리

🛠️ 새로운 기능:
- popup-test-suite.js: 개발 환경 테스트 도구
- deployment-check.js: 프로덕션 검증 시스템
- window.checkPopupSystem(): 실시간 상태 확인

🎯 해결된 문제:
- Vercel CDN 캐싱으로 인한 구버전 JS 파일 제공
- 팝업 초기화 실패 문제
- 디버깅 어려움

📊 검증 방법:
1. 브라우저 콘솔에서 '[Misopin Popup System]' 로그 확인
2. checkPopupSystem() 함수로 상태 확인
3. verifyPopupDeployment() 함수로 전체 검증

--- a/index.html
+++ b/index.html
@@ -31,7 +31,30 @@
 <link rel="stylesheet" href="css/grid-system-1450.css">
 <!-- API Integration for Popups -->
 <link rel="stylesheet" href="css/api-components.css">
-<script src="js/api-client.js"></script>
+<script>
+// Cache-busting script loader for api-client.js
+(function() {
+  'use strict';
+
+  const timestamp = Date.now();
+  const buildVersion = '1.2.0'; // Update this when making changes
+  const cacheBuster = `v=${buildVersion}&t=${timestamp}`;
+
+  console.log('[Cache Buster] Loading api-client.js with:', cacheBuster);
+
+  const script = document.createElement('script');
+  script.src = `js/api-client.js?${cacheBuster}`;
+  script.async = false; // Ensure synchronous loading
+  script.onload = function() {
+    console.log('[Cache Buster] api-client.js loaded successfully');
+  };
+  script.onerror = function() {
+    console.error('[Cache Buster] Failed to load api-client.js');
+  };
+
+  document.head.appendChild(script);
+})();
+</script>
 <style>
 @import url(//fonts.googleapis.com/earlyaccess/nanumpenscript.css);
 @import url(//fonts.googleapis.com/earlyaccess/nanumbrushscript.css);
@@ -2126,6 +2149,33 @@ $(function() {
 <!-- CMS 콘텐츠 로더 -->
 <script src="js/cms-content-loader.js"></script>
 <script src="js/cms-integration.js"></script>
+
+<!-- Popup System Test Suite (Development) -->
+<script>
+// Load test suite in development or when manually requested
+if (window.location.hostname === 'localhost' ||
+    window.location.hostname === '127.0.0.1' ||
+    window.location.search.includes('debug=true') ||
+    window.location.search.includes('test=true')) {
+
+  const testScript = document.createElement('script');
+  testScript.src = 'js/popup-test-suite.js';
+  testScript.onload = function() {
+    console.log('[Debug] Popup test suite loaded');
+  };
+  document.head.appendChild(testScript);
+}
+
+// Always load deployment verification in production
+if (window.location.hostname === 'misopin-renew.vercel.app' ||
+    window.location.hostname === 'misopin.com' ||
+    window.location.hostname === 'www.misopin.com') {
+
+  const deployScript = document.createElement('script');
+  deployScript.src = 'js/deployment-check.js';
+  document.head.appendChild(deployScript);
+}
+</script>
 
 </body>
 <!-- 자체 분석 도구 -->
