Fix: 팝업 localStorage 초기화 도구 추가
- 오늘 하루 보지 않기로 저장된 팝업 초기화
- URL 파라미터로 팝업 제어 가능
  - ?clearPopups=true: 저장된 팝업 설정 초기화
  - ?forcePopups=true: 모든 팝업 강제 표시
- 개발 환경에서 자동 로드

--- a/index.html
+++ b/index.html
@@ -53,6 +53,13 @@
   };
 
   document.head.appendChild(script);
+
+  // 개발/테스트를 위한 팝업 제어 스크립트 로드
+  if (window.location.hostname === 'localhost' || window.location.search.includes('debug=true')) {
+    const clearScript = document.createElement('script');
+    clearScript.src = 'js/clear-popups.js';
+    document.head.appendChild(clearScript);
+  }
 })();
 </script>
 <style>
