Fix calendar navigation and add reservation status API integration
- Added calendar_script.js to calendar-page.html
- Fixed previous month button (was empty, now shows 2025-08-01)
- Created calendar-integration.js for dynamic reservation status
- Added getReservationStatus() method to API client
- Calendar now shows real availability from database

--- a/calendar-page.html
+++ b/calendar-page.html
@@ -197,6 +197,8 @@ var g5_cookie_domain = "";
 <script src="js/common.js"></script>
 <script src="js/wrest.js"></script>
 <script src="js/libs/placeholders.min.js"></script>
+<script src="calendar-assets/js/calendar_script.js"></script>
+<script src="js/calendar-integration.js"></script>
 <link rel="stylesheet" href="css/vendor/font-awesome.min.css">
 <script src="js/vendor/feather.min.js"></script>
 <script src="js/components/top_menu.js"></script>
@@ -607,7 +609,7 @@ jQuery(function($){
     <input type="hidden" name="holiday" value="1">
     <input type="hidden" name="link" value="https://skincare1007.shiningcorp.com/skin/board/hos_calendar">
     <div class="title" >
-        <a href="#none" onclick="movePage('');"><span class="c_btn prev_btn"><i class="fa fa-angle-left"></i></span></a>
+        <a href="#none" onclick="movePage('2025-08-01');"><span class="c_btn prev_btn"><i class="fa fa-angle-left"></i></span></a>
         2025년 09월
         <a href="#none" onclick="movePage('2025-10-01');"><span class="c_btn next_btn"><i class="fa fa-angle-right"></i></span></a>
     </div>
