Add dynamic calendar generation based on URL parameters
- Created calendar-dynamic.js to generate calendar from URL select parameter
- Updates calendar to show correct month when navigating
- Reads year and month from URL to display appropriate calendar
- Fixed issue where calendar always showed September regardless of URL

--- a/calendar-page.html
+++ b/calendar-page.html
@@ -199,6 +199,7 @@ var g5_cookie_domain = "";
 <script src="js/libs/placeholders.min.js"></script>
 <script src="calendar-assets/js/calendar_script.js"></script>
 <script src="js/calendar-integration.js"></script>
+<script src="js/calendar-dynamic.js"></script>
 <script>
 // 캘린더 네비게이션 함수 재정의 (스크립트 로드 후)
 $(document).ready(function() {
