feat: Add sub-hero background image to board-detail page
- Applied same background image style as other board pages
- Used diet-06.webp image with gradient overlay
- Ensures consistent visual design across all board pages

--- a/board-detail.html
+++ b/board-detail.html
@@ -324,7 +324,7 @@ var g5_bbs_url   = "https://skincare1007.shiningcorp.com/bbs";
 	
 		<!-- 서브 비주얼영역 -->
 		<div id="sub_main_banner">
-		    <div id="shSub">
+		    <div id="shSub" style="background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('images/diet/diet-06.webp'); background-size: cover; background-position: center; background-repeat: no-repeat;">
 		        <div class="txt_area">
 		            <p>공지 및 이벤트</p>
 		            <div class="breadcrumb">
