--- a/index.html
+++ b/index.html
@@ -1248,7 +1248,7 @@ table thead, th {
                     </ul>
                 </nav>
             </div>
-            <a class="event" href="board-page.html">09월 이벤트</a>
+            <a class="event" href="board-event.html">09월 이벤트</a>
         </div>
     </div>
 </header>
