style: Standardize H2 tag color to #666666 in about.html
- Changed H2 tag color from #333 to #666666 for consistency
- Matches the color scheme used across other pages

--- a/about.html
+++ b/about.html
@@ -277,7 +277,7 @@ var g5_bbs_url   = "https://skincare1007.shiningcorp.com/bbs";
 		                <p style="font-size: 2.5rem; font-weight: 300; color: #9F988C; margin-bottom: 1rem; line-height: 1.4;" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="300">
 		                    미소핀의원은 개인별 맞춤 진료를 제공합니다.
 		                </p>
-		                <h2 style="font-size: 1.875rem; font-weight: 600; color: #333; margin-bottom: 2rem; line-height: 1.5;" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="400">
+		                <h2 style="font-size: 1.875rem; font-weight: 600; color: #666666; margin-bottom: 2rem; line-height: 1.5;" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="400">
 		                    첨단 의료 장비와 안전한 시술 환경을 통해<br/>최상의 치료 결과를 약속드립니다.
 		                </h2>
 		                <p style="font-size: 1.125rem; color: #666; margin: 0; line-height: 1.6;" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="500">
@@ -369,7 +369,7 @@ var g5_bbs_url   = "https://skincare1007.shiningcorp.com/bbs";
 		                            </div>
 		                            <div class="facility-content">
 		                                <div class="facility-category">대기 공간</div>
-		                                <h3 class="facility-title">아늑한 대기실 2</h3>
+		                                <h3 class="facility-title">편안한 대기실 2</h3>
 		                                <p class="facility-description">편안하고 아늑한 분위기의 또 다른 대기 공간입니다.</p>
 		                            </div>
 		                        </div>
