fix: Unify mobile logo size in calendar-page.html
- Changed mobile logo height from 2.5rem to 3.125rem
- Now consistent with other pages' mobile logo size

--- a/calendar-page.html
+++ b/calendar-page.html
@@ -464,8 +464,7 @@ textarea:focus {
     <div id="mo_hd_wrapper">
         <!-- 모바일 로고 -->
         <div id="mo_logo">
-            <a href="index.html"><img src="img/misopin-temporary-logo.png" alt="미소핀의원" style="height: 2.5rem;" />
-            </a>
+            <a href="index.html"><img src="img/misopin-temporary-logo.png" alt="미소핀의원" style="height: 3.125rem;" /></a>
         </div>
         
         <!-- 햄버거 메뉴 버튼 -->
