--- a/index.html
+++ b/index.html
@@ -1254,7 +1254,13 @@ table thead, th {
     <div id="mo_hd_wrapper">
         <!-- 모바일 로고 -->
         <div id="mo_logo">
-            <a href="index.html"><img src="img/misopin-temporary-logo.png" alt="미소핀의원" style="height: 3.125rem;" /></a>
+            <a href="index.html">
+                <img src="img/misopin-temporary-logo.png"
+                     srcset="img/misopin-temporary-logo.png 2048w, img/misopin-temporary-logo.png 1024w, img/misopin-temporary-logo.png 512w"
+                     sizes="(max-width: 768px) 80px, 120px"
+                     alt="미소핀의원"
+                     style="height: 3.125rem;" />
+            </a>
         </div>
         
         <!-- 햄버거 메뉴 버튼 -->
