test: GitHub Actions 자동 배포 테스트
- 자동 배포 시스템 작동 확인
- index.html에 타임스탬프 주석 추가

--- a/index.html
+++ b/index.html
@@ -2184,3 +2184,4 @@ if (window.location.hostname === 'misopin-renew.vercel.app' ||
 <!-- 자체 분석 도구 -->
 <script src="js/analytics-setup.js"></script>
 </html>
+<\!-- Updated: $(date) -->
