feat: 비디오 섹션 화면 전체 너비(100vw) 사용하도록 CSS 수정
- .sns_section에 width: 100vw 추가
- margin-left/right calc()로 부모 컨테이너 벗어나서 화면 전체 너비 확보
- 다른 섹션은 1450px 유지하면서 비디오 섹션만 풀스크린

--- a/index.html
+++ b/index.html
@@ -293,6 +293,10 @@ var g5_cookie_domain = "";
     min-height: 50rem !important;
     height: 85vh !important;
     max-height: 62.5rem !important;
+    /* 화면 전체 너비 사용 */
+    width: 100vw !important;
+    margin-left: calc(50% - 50vw) !important;
+    margin-right: calc(50% - 50vw) !important;
 }
 
 .video_background {
