--- a/index.html
+++ b/index.html
@@ -783,11 +783,20 @@ var g5_cookie_domain = "";
         width: 100%;
         padding: 2.5rem 1.25rem;
     }
-    
+
+    .doctor_name {
+        font-size: 1.5rem;
+    }
+
+    .doctor_description p {
+        font-size: 1rem;  /* 모바일에서 22px → 16px로 축소 */
+        line-height: 1.5;
+    }
+
     .doctor_credentials ul {
         gap: 0.375rem;
     }
-    
+
     .doctor_credentials li {
         font-size: 0.8125rem;
     }
